Archive2/a4/5788d765a3b5c7/main.cpp
#include <iostream>
#include <type_traits>

class X {};
class A : public X {};
class B {};

struct Abstract {
    virtual void foo() = 0;
};

template <class T>
struct Concrete : Abstract {
    virtual void foo() override {};
};

template <class T>
struct Base
: std::conditional_t<
    std::is_base_of<X,T>{},
    Concrete<T>,
    Abstract
> {};

int main()
{
    Base<A> a;
    Base<B> b; // ok, error
    
    return 0;
}
